# jjpr

./: CLAUDE.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  release.yml
examples/: generate_assets.rs
packaging/aur/jjpr/: PKGBUILD
packaging/aur/jjpr-bin/: PKGBUILD
scripts/: stats.sh
src/: auth.rs  cli.rs  config.rs  lib.rs  main.rs  watch.rs
src/forge/: comment.rs  forgejo.rs  github.rs  gitlab.rs  http.rs  mod.rs  remote.rs  token.rs  types.rs
src/graph/: change_graph.rs  traversal.rs
src/jj/: mod.rs  runner.rs  templates.rs  types.rs
src/merge/: execute.rs  plan.rs  watch.rs
src/submit/: analyze.rs  execute.rs  plan.rs  resolve.rs
tests/: cli.rs  e2e.rs  jj_integration.rs
